<?xml version="1.0"?>
<package format="3">
  <name>iso_object</name>
  <version>0.1.0</version>
  <description>
    This package provides a ROS 2 library for ISO object functionalities.
  </description>

  <maintainer email="you@yourdomain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Add explicit dependency on iso22133 -->
  <depend>iso22133</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>